--- a/o365cert.html
+++ b/o365cert.html
@@ -176,7 +176,8 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
     <tr>
     
       <td style='padding-right:200px; width:100%;'><br><div class=headline id="AzureLogons"><b>Secure Office365 reports with a certifificate</b></div><br>
-        <div class=articleContent>TBC</div>
+        <div class=articleContent>When using Graph or the new ExchangeOnlineManagement module we can easily connect to to the Azure AD App using a self-signed client certificate. For the Office365 Reporting API however their are only examples connecting using a shared secret.
+		If like me you would prefer not to be putting this secret on a script file, then read on.</div>
           <br><br>
                   <div class=tags>Tags: O365, Certificate, PowerShell</div><br>
                   <br>
