--- a/links.html
+++ b/links.html
@@ -180,8 +180,12 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
         <div class=articleContent>A collection of various links.<br><br>
            <table>
 		<tr><td><td style='width:370px; font-size 12px; align:left'><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;'></td></tr>
-		<tr><td><td style='width:370px; font-size 12px;'><a href='https://tech.nicolonsky.ch/'>nicolonsky tech</a></td><td style='font-size 12px;'></td></tr>
-	</table>
+		<tr><td><td style='width:370px; font-size 12px;'><a href='https://tech.nicolonsky.ch/'>nicolonsky tech</a></td><td style='font-size 12px;'>Great articles on Graph and securing Azure AD environments.</td></tr>
+		<tr><td><td style='width:370px; font-size 12px;'><a href='https://powershell-guru.com/'>PowerShell Guru</a></td><td style='font-size 12px;'>Doesn't seem to be updated much anymore but has some excellent articles on what PowerShell commands are the fastest.</td></tr>
+
+		
+		
+		</table>
           <br><br> 
                   <div class=tags>Tags: Links</div><br>
                   <br>
