--- a/links.html
+++ b/links.html
@@ -179,11 +179,13 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><b>Links</b></div>
         <div class=articleContent>A collection of various links.<br><br>
            <table>
-		<tr><td><td style='width:370px; font-size 12px; align:left'><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;'></td></tr>
+		<tr><td><td style='width:370px; font-size 12px; align:left'><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;'>Advanced PowerShell scripts for Office365</td></tr>
 		<tr><td><td style='width:370px; font-size 12px;'><a href='https://tech.nicolonsky.ch/'>nicolonsky tech</a></td><td style='font-size 12px;'>Great articles on Graph and securing Azure AD environments.</td></tr>
 		<tr><td><td style='width:370px; font-size 12px;'><a href='https://powershell-guru.com/'>PowerShell Guru</a></td><td style='font-size 12px;'>Doesn't seem to be updated much anymore but has some excellent articles on what PowerShell commands are the fastest.</td></tr>
+		<tr><td><td style='width:370px; font-size 12px;'><a href='http://terenceluk.blogspot.com/'>Terence Luk</a></td><td style='font-size 12px;'>Good insites into Exchange and NetScaler, also has articles on Teams.</td></tr>
+		<tr><td><td style='width:370px; font-size 12px;'><a href='https://blog.joeware.net/'>Joeware</a></td><td style='font-size 12px;'>Insights into AD.</td></tr>
 
-		
+	
 		
 		</table>
           <br><br> 
