--- a/about.html
+++ b/about.html
@@ -179,8 +179,8 @@ a.title:hover {color: #000000; text-decoration: none;}
           <div class=headline id="AzureLogons"><br><br><b>Certifications</b></div>
            <table style='padding:4px;'>
 		   <tr><td><a href='ms-220.png' border=0><img src=ms-220.png width=50></a></td><td style='font-size 12px; width:70px;' >MS-220</td><td style='width:370px; font-size 12px;' >Exchange Online Support Engineer Speciality</td><td style='font-size 12px;'>November 2022</td></tr>
-		   <tr><td><img src=ms-740.png width=50></td><td style='font-size 12px;' >MS-740</td><td style='width:370px; font-size 12px;' >Teams Support Engineer Speciality</td><td style='font-size 12px;'>November 2022</td></tr>
-		   <tr><td><img src=az-104.png width=50></td><td style='font-size 12px;' >AZ-104</td><td  style='width:370px; font-size 12px;'>Microsoft Azure Administrator</td><td style='font-size 12px;'>December 2022</td></tr>
+		   <tr><td><a href='ms-740.png' border=0><img src=ms-740.png width=50></a></td><td style='font-size 12px;' >MS-740</td><td style='width:370px; font-size 12px;' >Teams Support Engineer Speciality</td><td style='font-size 12px;'>November 2022</td></tr>
+		   <tr><td><a href='az-104.png' border=0><img src=az-104.png width=50></a></td><td style='font-size 12px;' >AZ-104</td><td  style='width:370px; font-size 12px;'>Microsoft Azure Administrator</td><td style='font-size 12px;'>December 2022</td></tr>
 	</table>
           <br><br> 
                   <div class=tags>Tags: Website</div><br>
