--- a/iisQueue.html
+++ b/iisQueue.html
@@ -177,8 +177,7 @@ a.title:hover {color: #000000; text-decoration: none;}
     <tr>
     
       <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><b>IIS Mapi Queue full with NetScaler Load Balancer</b></div>
-        <div class=articleContent>A recent issue I came across appeared to happen at random times during the working week. 
-		Outlook cleints would be disconnected for up to 30 minutes before returning to normal. 
+        <div class=articleContent>A recent issue I came across appeared to happen at random times during the working week where Outlook clients would be disconnected for up to 30 minutes before returning to normal. 
 		As the issue seemed to only occur after a patching cycle the focus at first was on what was in the those patches and was there an incompatibility with Outlook. 
 		After chasing a few <a href='https://oddytee.wordpress.com/2015/03/21/this-page-cant-be-displayed-when-accessing-protocolhealthcheck-htm-in-exchange-2013/'>leads</a> I eventually narrowed down the issue with the help of the HTTP_Err logs (c:\windows\logs\HTTP_Err\) that are never truncated.
 		<br><br>
