--- a/iisQueue.html
+++ b/iisQueue.html
@@ -189,7 +189,7 @@ a.title:hover {color: #000000; text-decoration: none;}
 		The connections would now all go to the other active node, and after a while this server in turn would get overloaded with connections. 
 		<br><br>
 		We now had an understanding of the problem but one question remained, with 2 active servers in the AD site why were all the client connections going to 1 server and not load balanced as they were meant to be. 
-		The NetScaler had been setup using <a href='https://citrixguyblog.com/2017/07/22/citrix-netscaler-loadbalancing-exchange-20132016-walkthrough-guide/'>best practices</a> but still we could see that 99% of the MAPI connections were going to once server.
+		The NetScaler had been setup using <a href='https://citrixguyblog.com/2017/07/22/citrix-netscaler-loadbalancing-exchange-20132016-walkthrough-guide/'>best practices</a>, but still we could see that 99% of the MAPI connections were going to once server.
 		We opened a support call with Citrix and eventually got speaking to the right engineer, he explained that we had to choose 'Round Robin' and not 'Least Connection' as shown on some guides for setting up NetScaler.<br> 
 		<br>
 		<img src='iisQueue05.png'>
