--- a/iisQueue.html
+++ b/iisQueue.html
@@ -179,15 +179,22 @@ a.title:hover {color: #000000; text-decoration: none;}
       <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><b>IIS Mapi Queue full with NetScaler Load Balancer</b></div>
         <div class=articleContent>A recent issue I came across appeared to happen at random times during the working week where Outlook clients would be disconnected for up to 30 minutes before returning to normal. 
 		As the issue seemed to only occur after a patching cycle the focus at first was on what was in the those patches and was there an incompatibility with Outlook. 
-		After chasing a few <a href='https://oddytee.wordpress.com/2015/03/21/this-page-cant-be-displayed-when-accessing-protocolhealthcheck-htm-in-exchange-2013/'>leads</a> I eventually narrowed down the issue with the help of the HTTP_Err logs (c:\windows\logs\HTTP_Err\) that are never truncated.
+		After chasing a few <a href='https://oddytee.wordpress.com/2015/03/21/this-page-cant-be-displayed-when-accessing-protocolhealthcheck-htm-in-exchange-2013/'>leads</a> I eventually narrowed down the issue with the help of the HTTP_Err logs (c:\Windows\System32\LogFiles\HTTPERR) that are never truncated.
 		<br><br>
-		Within these logs we could see a 503.2 error, which translates to queue full. So it appeared that after 4 years of running Exchange 2016 we were hitting a new limit on the system. 
-		With the help of this <a href='xxx'>script</a> I was able to setup my own PowerShell script to monitor the number of MAPI connections we were receiving and it soon became clear that when the connections were hitting 4,000 that the queue limit would be reached. 
-		The app pool limit is set to 1,000 by default, so I looked into see if this could be increased, but as per this <a href='https://technet440.rssing.com/chan-6827930/article14521.html'>article</a> increasing the queue size is unlikely to fix the issue.
-		<br><br>
+		Within these logs we could see a 400.2 error, which translates to queue full. So it appeared that after 4 years of running Exchange 2016 we were hitting a new limit on the system. 
+		With the help of a <a href='https://ingogegenwarth.wordpress.com/2016/05/09/get-activeexchangeusers-2-0/'>script</a> I was able to setup my own PowerShell script to monitor the number of MAPI connections we were receiving and it soon became clear that when the connections were hitting 4,000 that the queue limit would be reached. 
+		The app pool limit is set to 1,000 by default, so I looked into see if this could be increased, but as per this <a href='https://technet440.rssing.com/chan-6827930/article14521.html'>article</a> increasing the queue size is unlikely to fix the issue.<br>
+		<br>
+		<img src='iisQueue03.png'>
+		<div class=ImageCaption>Lots of IIS 400.2 errors - Connection_Dropped_List_Full.</div>
+		<br>
+		
 		What was also happening when the queue reached it's limit is that the NetScaler load balancer was failing over, the heartbeat relies on a 200 response from accessing https://<ex_server>/health/mapi/healthcheck.htm, when it doesn't get the 200 response it assumes the server is down for that service.
-		The connections would now all go to the other active node, and after a while this server in turn would get overloaded with connections. 
-		<br><br>
+		The connections would now all go to the other active node, and after a while this server in turn would get overloaded with connections.<br>
+		<br>
+		<img src='iisQueue04.png'>
+		<div class=ImageCaption>Mapi connections nearly all go to one of the two active nodes.</div>
+		<br>
 		We now had an understanding of the problem but one question remained, with 2 active servers in the AD site why were all the client connections going to 1 server and not load balanced as they were meant to be. 
 		The NetScaler had been setup using <a href='https://citrixguyblog.com/2017/07/22/citrix-netscaler-loadbalancing-exchange-20132016-walkthrough-guide/'>best practices</a>, but still we could see that 99% of the MAPI connections were going to once server.
 		We opened a support call with Citrix and eventually got speaking to the right engineer, he explained that we had to choose 'Round Robin' and not 'Least Connection' as shown on some guides for setting up NetScaler.<br> 
@@ -196,6 +203,9 @@ a.title:hover {color: #000000; text-decoration: none;}
 		<div class=ImageCaption>Guides say to use 'Least Connection' but actually we need 'Round Robin' here to distribute the traffic.</div>
 		<br><br>
 		After we made the change we now see the connections evenly distributed and we no longer see the queue full error messages on IIS.<br>
+		<br>
+		<img src='iisQueue06.png'>
+		<div class=ImageCaption>Mapi connections spread evenly across both servers.</div>
           <br><br> 
                   <div class=tags>Tags: IIS, NetScaler, MAPI</div><br>
                   <br>
