--- a/graphMail.html
+++ b/graphMail.html
@@ -178,9 +178,13 @@ a.title:hover {color: #000000; text-decoration: none;}
     <tr>
     
       <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><b>Using Graph to send emails with inline image</b></div>
-        <div class=articleContent>TBC<br>
+	      <div class=articleContent>There are number of excellent <a href='https://tech.nicolonsky.ch/sending-emails-with-modern-auth/'>articles</a> on sending authenticated mail via MS Graph, replacing SMTP relay.
+		       Unfortunately none of them addressed adding inline images as attachment. This can be useful if you need to ensure the images are displayed correctly and don't have a website to host the images. 
+		      <br>
+		     First...
           <br><br> 
                   <div class=tags>Tags: Graph</div><br>
+		      <div class=tags>Posted: 05-Aug-22</div><br>
                   <br>
                   <div class="horizontal_dotted_line"></div><br>
                   <br>
