--- a/DNScleanup.html
+++ b/DNScleanup.html
@@ -179,7 +179,7 @@ a.title:hover {color: #000000; text-decoration: none;}
     <tr>
     
       <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><b>Cleaning up your Windows DNS server</b></div>
-        <div class=articleContent>Having contracted at a number of companies over the years I've seen my fair share of horror shows with regards DNS. For something so simple it really does have a lot of importance and should be regualraly reviewed.<br>
+        <div class=articleContent>Having contracted at a number of companies over the years I've seen my fair share of horror shows with regards DNS. For something so simple it really does have a lot of importance and should be regularly reviewed.<br>
 		<br>
 		In my latest role the DNS setup was quite simple and I'm happy to report DNS scavaging was enabled, so the majority of records were correct and up-to-date. So what to check?<br>
 		<li>Static records, do they still ping?</li>
