--- a/DNScleanup.html
+++ b/DNScleanup.html
@@ -183,13 +183,17 @@ a.title:hover {color: #000000; text-decoration: none;}
 		<br>
 		In my latest role the DNS setup was quite simple and I'm happy to report DNS scavaging was enabled, so the majority of records were correct and up-to-date.<br>
 		<img src=DNScleanup01.png>
-		
+		<div class=ImageCaption>Scavenging set correctly for the main AD domain.</div>
+		<br>
 		So what to check?<br>
 		<li>Static records, do they still ping?</li>
 		<li>Cross reference records with AD.</li>
 		<li>Cross reference records with DMZ servers, hosted on VMware so we can use PowerCLI to check.</li>
 		<li>Check if A record has reverse lookup record (PTR) set?</li>
 		<li>With our secondary domain we had spit DNS setup, checks to ensure all records were correct.</li>
+		<br>
+		<img src=DNScleanup01.png>
+		<div class=ImageCaption>Here we use PowerShell to pull the PTR reverse records.</div>
 		<br>
 		What did we find? A few hundred records were wrong:<br>
 		<li>About 50 A records could be deleted</li>
