--- a/DNScleanup.html
+++ b/DNScleanup.html
@@ -180,10 +180,9 @@ a.title:hover {color: #000000; text-decoration: none;}
     
       <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><b>Cleaning up your Windows DNS server</b></div>
         <div class=articleContent>Having contracted at a number of companies over the years I've seen my fair share of horror shows with regards DNS. For something so simple it really does have a lot of importance and should be regularly reviewed.<br>
-		<br>
-		In my latest role the DNS setup was quite simple and I'm happy to report DNS scavaging was enabled, so the majority of records were correct and up-to-date.<br>
+		In my latest role the DNS setup was quite simple and I'm happy to report DNS scavaging was enabled, so the majority of records were correct and up-to-date.<br><br>
 		<img src=DNScleanup01.png>
-		<div class=ImageCaption>Scavenging set correctly for the main AD domain.</div>
+		<div class=ImageCaption>Scavenging set correctly for the main AD domain zone.</div>
 		<br>
 		So what to check?<br>
 		<li>Static records, do they still ping?</li>
