--- a/DNScleanup.html
+++ b/DNScleanup.html
@@ -198,10 +198,10 @@ a.title:hover {color: #000000; text-decoration: none;}
 		<li>About 50 A records could be deleted</li>
 		<li>A number of subnets were missing for reverse DNS lookup zones.</li>
 		<li>Some DMZ servers had been removed from VMware but the DNS record remained.</li>
-		<li>We foud that our Fortinet Site-to-Site did not have rights to update the PTR record.</li>
-		<li>In our spit DNS zone we added an MX record, it didn't fix an issue but some of the Microsoft health scripts we ran were a lot happier with it present.</li>
+		<li>We found that our Fortinet Site-to-Site VPN did not have rights to update the PTR record.</li>
+		<li>In our split DNS zone we added an MX record, it didn't fix an issue but some of the Microsoft health scripts we ran were a lot happier with it present.</li>
 		<br>
-		While some of the fixes may sound trivial, when an issue occurs and you need to track down a client, you will be happy to have good DNS setup.<br>
+		While some of the fixes may sound trivial, when an issue occurs and you need to track down a client you will be happy to have a correct DNS setup.<br>
           <br><br> 
                   <div class=tags>Tags: Windows, DNS, PowerShell</div><br>
 		<div class=tags>Posted: 13-Feb-22</div><br>
