--- a/alwaysOn.html
+++ b/alwaysOn.html
@@ -186,6 +186,9 @@ a.title:hover {color: #000000; text-decoration: none;}
 		 We now knew who was connected, but we needed to find out what user was logged in to the server. For stability we enabled remote PowerShell as the older commands can fail without timing out. 
 		Running the script every 15 minutes we could see what clients were connecting and disconnecting and log this.<br>
 		<br>
+		<img src=alwaysOn01.png>
+		<div class=ImageCaption>We can check what ISP the users connect with and if they have MFA enabled.</div>
+		<br>
 		During the course of the script there were 2 issues:
 		<li>Mass disconnects of all clients</li>
 		<li>DNS not updating on clients</li>
