--- a/charts.html
+++ b/charts.html
@@ -180,6 +180,9 @@ a.title:hover {color: #000000; text-decoration: none;}
         <div class=articleContent>Visualising data via a bar chart can be an effective way to report on monthly totals. The most basic way of doing this is to create a chart with basic HTML. 
 		But if you have an outlier in your dataset then the chart can become distorted and hard to read.<br>
 		<br>
+		<img src=charts01.png>
+		<div class=ImageCaption>Basic HTML chart.</div>
+		<br>
 		With this in mind I looked for a simple solution without spending a lot time learning Javascript. I finally settled on <a href='https://developers.google.com/chart'>Google Charts</a>, in part because the Javascript package should still be around in 10 years time.
 		 There are a number of different charts, some even with annimations, but for my puposes I just needed basic bar charts and pie charts.<br>
 		<br>
@@ -187,6 +190,9 @@ a.title:hover {color: #000000; text-decoration: none;}
 		 You can add extra data to a hover over option on each record too, which keeps the chart simple.<br>
 		<br>
 		Finally we output the chart onto the page.
+		<br>
+		<img src=charts02.png>
+		<div class=ImageCaption>Google chart.</div>
 		<br>
           <br><br> 
                   <div class=tags>Tags: Graph, Google Charts</div><br>
