--- a/charts.html
+++ b/charts.html
@@ -183,13 +183,17 @@ a.title:hover {color: #000000; text-decoration: none;}
 		<img src=charts01.png>
 		<div class=ImageCaption>Basic HTML chart.</div>
 		<br>
-		With this in mind I looked for a simple solution without spending a lot time learning Javascript. I finally settled on <a href='https://developers.google.com/chart'>Google Charts</a>, in part because the Javascript package should still be around in 10 years time.
-		 There are a number of different charts, some even with annimations, but for my puposes I just needed basic bar charts and pie charts.<br>
+		With this in mind I looked for a simple solution without spending a lot time learning Javascript. I finally settled on <a href='https://developers.google.com/chart'>Google Charts</a>, in part because the package should still be around in 10 years time.
+		 There are a number of different charts, some even with animations, but for my puposes I just needed basic bar charts and pie charts.<br>
 		<br>
 		First we take in the data, you might want to limit it to the last 180 results so the chart fits on the page. We create the chart basics, then in the PowerShell for loop we add the records.
 		 You can add extra data to a hover over option on each record too, which keeps the chart simple.<br>
 		<br>
-		Finally we output the chart onto the page.
+		<img src=charts03.png>
+		<div class=ImageCaption>We add a record for each hour of the last 24 hours using a PowerShell loop.</div>
+		<br>
+		
+		Finally, we output the chart onto the page.<br>
 		<br>
 		<img src=charts02.png>
 		<div class=ImageCaption>Google chart.</div>
