--- a/alwaysOn.html
+++ b/alwaysOn.html
@@ -197,7 +197,7 @@ a.title:hover {color: #000000; text-decoration: none;}
 		<li>Mass disconnects of all clients</li>
 		<li>DNS not updating on clients</li>
 		<br>
-		For the first issue I was not involved in troubleshooting but I could report to the Citrix admin of a mass disconnection event within a time range of 15 minutes. This helped the admin isolte the issue more quickly. 
+		For the first issue I was not involved in troubleshooting but I could report to the Citrix admin of a mass disconnection event within a time range of 15 minutes. This helped the admin isolate the issue more quickly. 
 		For the DNS issue where the VPN clients could not update their A record we found that the fix from Citrix took so long that we had to implement our own temporary fix. We had the IP's that were connected via Nitro, so this allowed us to use remote PowerShell to query the registry and find the real hostname of the computer connected to the VPN. 
 		 With this information we could then update the DNS servers, again with PowerShell. After a few tweaks the script worked as designed and no issues were reported until we got our final fix from Citrix.<br>
 		
