--- a/charts.html
+++ b/charts.html
@@ -177,7 +177,7 @@ a.title:hover {color: #000000; text-decoration: none;}
     <tr>
     
       <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><b>Visualizing Graph data with Google Charts</b></div>
-        <div class=articleContent>Visualising data via a bar chart can be an effective way to report on monthly totals. The most basic way of doing this is to create a chart with basic HTML. 
+        <div class=articleContent>Visualising data via a bar chart can be an effective way to report on monthly totals. One of easiest ways of doing this is to create a chart with basic HTML. 
 		But if you have an outlier in your dataset then the chart can become distorted and hard to read.<br>
 		<br>
 		<img src=charts01.png>
