--- a/charts.html
+++ b/charts.html
@@ -184,7 +184,7 @@ a.title:hover {color: #000000; text-decoration: none;}
 		<div class=ImageCaption>Basic HTML chart.</div>
 		<br>
 		With this in mind I looked for a simple solution without spending a lot time learning Javascript. I finally settled on <a href='https://developers.google.com/chart'>Google Charts</a>, in part because the package should still be around in 10 years time.
-		 There are a number of different charts, some even with animations, but for my puposes I just needed basic bar charts and pie charts.<br>
+		 There are a number of different charts, some even with animations, but for my puposes I just needed basic bar and pie charts.<br>
 		<br>
 		First we take in the data, you might want to limit it to the last 180 results so the chart fits on the page. We create the chart basics, then in the PowerShell for loop we add the records.
 		 You can add extra data to a hover over option on each record too, which keeps the chart simple.<br>
