--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       <i class="fa fa-caret-down"></i>
     </button> 
     <div class="dropdown-content">
+	<a href="oneDriveLocale.html" class=two>Set OneDrive for Business Locale</a>
 	<a href="o365migration.html" class=two>O365 Migration Tips</a>
 	<a href="o365reporting.html" class=two>Reporting on successful Azure logons</a>
 	<a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a>
