--- a/o365migration.html
+++ b/o365migration.html
@@ -180,6 +180,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
          <div class=articleContent>Some tips that can help when migrating mailboxes to O365<br>
            <br><br><b>Shared Mailboxes</b><br>
           &#8226;  Shared mailboxes need a license to be migrated, you can apply for 25 free Office365 licenses for 2 months.<br>
+	  &#8226;  To migrate a shared mailbox you must set the password then enable the account before migration. After the migration the AD account should be disabled again.<br>	 
           &#8226;  Max shared mailbox size is 50GB.<br>
           &#8226;  MessageCopyForSentAsEnabled and MessageCopyForSendOnBehalfEnabled need to be set on the O365 mailbox even if set on-prem.<br>
           &#8226;  MessageCopyForSentAsEnabled and MessageCopyForSendOnBehalfEnabled <a href='https://docs.microsoft.com/en-us/exchange/troubleshoot/user-and-shared-mailboxes/sent-mail-is-not-saved'>will not work</a> if shared mailbox is on-premise and user mailbox is in O365 and vice-versa.<br>
@@ -187,8 +188,11 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
           <br><b>User Mailboxes</b><br>
 	  &#8226;  Delegated permssions need to be enabled - <a href='https://learn.microsoft.com/en-us/exchange/hybrid-deployment/set-up-delegated-mailbox-permissions'>Set-OrganizationConfig -ACLableSyncedObjectEnabled $True</a> .<br>
           &#8226;  Any additional addresses must be removed - eg user@domain.local.<br>
+	  &#8226;  The mailbox must have a @domain.mail.onmicrosoft.com address.<br>
+	  &#8226;  AD accounts must be in an OU synced to Azure AD.<br>
           &#8226;  User mailboxes should be assigned a retention policy and an auto-expanding archive.<br>
 	  &#8226;  Set the mailbox language after the migration.<br>
+	  &#8226;  After migration they should be assigned to the ExchangeOnline feature in O365 licensing.<br>
 	    </td>
 	</tr>
 	</table>
