--- a/o365migration.html
+++ b/o365migration.html
@@ -140,7 +140,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
 <body>
   <table class=headerTable>
     <tr>
-      <td style='font-size:50px;padding:30px;color:black;width:120px;vertical-align:top;' rowspan=2>PowerShell<br> & Graph<br>Blog</td>
+      <td style='font-size:50px;padding:30px;color:black;width:120px;vertical-align:top;' rowspan=2><a href=index.html class=title>PowerShell<br> & Graph<br>Blog</a></td>
       
 
     <td style='width:100%;'>
