--- a/newindex.html
+++ b/newindex.html
@@ -9,7 +9,7 @@
     <table style='width:100%;'>
       <tr><td style='align:left; height:40px;'><span style="color: #cecece; font-size: 135px;">&#x2B22; Powershell and Graph Blog</span></td></tr> 
       <tr><td style='height:1px; color:#cecece'></td></tr>
-      <tr><td style='align:center;'>Main article</td></tr>
+      <tr><td style='align:center;'>Main article...</td></tr>
     </table>
     
     
